Whisper and opencv

--- a/opencv_face_detect/data/opencv_config.json
+++ b/opencv_face_detect/data/opencv_config.json
@@ -1,7 +1,7 @@
 {
   "data": {
     "xmlUrl": "data/haarcascade_frontalface_default.xml",
-    "imgUrl": "img/faces.jpg",
+    "imgUrl": "img/me.jpg",
     "saveTrainUrl": "data/train.yml"
   }
 }
