--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-pyttsx3==2.90
-opencv-python
-SpeechRecognition
-PocketSphinx
-openai-whisper
+pyttsx3
+faster_whisper==1.0.1
+numpy<2
+requests==2.32.3
+sounddevice==0.4.7
+ollama
