--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,10 @@ modelscope
 
 
 
-fastapi==0.110.0
+
 ffmpeg-python==0.2.0
 librosa==0.10.1
 transformers==4.38.2
-soundfile==0.12.1
-uvicorn==0.27.1
 torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
 pytorch-lightning==2.4.0
 matplotlib==3.9.2
@@ -23,4 +21,10 @@ einops==0.8.0
 cn2an==0.5.22
 pypinyin==0.52.0
 jieba_fast==0.53
-playsound
+
+g2p_en==2.1.0
+wordsegment==1.3.1
+pyopenjtalk==0.3.4
+pydub==0.25.1
+simpleaudio==1.0.4
+soundfile==0.12.1
