--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ faster_whisper==1.0.1
 numpy<2
 requests==2.32.3
 modelscope
-gradio==4.40.0
+gradio==5.1.0
 pyttsx3==2.90
 sounddevice==0.4.7
 # opencv-python
@@ -23,6 +23,7 @@ cn2an==0.5.22
 pypinyin==0.52.0
 jieba_fast==0.53
 
+LangSegment==0.3.4
 g2p_en==2.1.0
 wordsegment==1.3.1
 pyopenjtalk==0.3.4
