--- a/requirements.txt
+++ b/requirements.txt
@@ -2,31 +2,10 @@ faster_whisper==1.0.1
 numpy<2
 requests==2.32.3
 modelscope
-gradio==5.1.0
+gradio==5.0.1
 pyttsx3==2.90
 sounddevice==0.4.7
 # opencv-python
-
+edge_tts
 # 错误 大模型项目部署时Gradio Web页面打不开或者打开用不了及pydantic.errors.PydanticSchemaGenerationError
 # 解决方法 pip install fastapi==0.112.2
-
-
-
-ffmpeg-python==0.2.0
-librosa==0.10.1
-transformers==4.38.2
-torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
-pytorch-lightning==2.4.0
-matplotlib==3.9.2
-einops==0.8.0
-cn2an==0.5.22
-pypinyin==0.52.0
-jieba_fast==0.53
-
-LangSegment==0.3.4
-g2p_en==2.1.0
-wordsegment==1.3.1
-pyopenjtalk==0.3.4
-pydub==0.25.1
-simpleaudio==1.0.4
-soundfile==0.12.1
