模型下载优化

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
+# 生成一个 requirements.txt，在项目根目录下运行：pipreqs .
+pipreqs
 faster_whisper==1.0.1
-numpy<2
-requests==2.32.3
-gradio==5.0.1
-sounddevice==0.4.7
-# opencv-python
-edge_tts
+#numpy<2
+gradio==5.4.0
 # 错误 大模型项目部署时Gradio Web页面打不开或者打开用不了及pydantic.errors.PydanticSchemaGenerationError
 # 解决方法 pip install fastapi==0.112.2
+sounddevice==0.4.7
+# opencv-python
+edge_tts==6.1.14
+
+
+
+
+
+#simpleaudio==1.0.4
+#pydub==0.25.1
+#scipy==1.14.1
